Revision history for Perl extension AnyEvent.

TODO: document ->loop, and maybe one_event.
TODO: untainting default resolveR?
	- implement and document AnyEvent::Impl::Perl::loop.

4.411 Sun Jun  7 18:48:02 CEST 2009
	- do not try to use F_SETFD on windows.

4.41  Thu May 14 06:40:11 CEST 2009
        - work around issues in older perls (5.8.0?) when
          a signal handler is deleted from the %SIG hash.
        - use POSIX::_exit in child test, to avoid running
          destructors.
        - speed up CHLD handling by relying on SIGCHLD being
          synchronously delivered, even when we roll our own
          implementation.
	- AnyEvent::DNS: add the "dname" resource record name
          for cosmetic reasons.

4.4   Sun Apr 26 20:12:33 CEST 2009
	- implemented idle watchers, where applicable.
	- AnyEvent->time died when Event backend was in use.
        - fix a memleak in the Tk backend.
        - sped up Tk timer handling.
        - clip negative "after" values to 0 in AnyEvent::Impl::Event
          to avoid spamming out warning messages.
        - fix Qt timers without interval.
        - avoid Qt zero-timeout specialcase, in old libqt's.

4.352 Mon Apr 20 16:31:11 CEST 2009
	- fix AnyEvent::Strict error messages for child watchers.
        - fix/update Makefile.PL "recommends" versions.
        - add AnyEvent->now_update.

4.351 Sat Apr 11 07:56:14 CEST 2009
        - actually make the signal pipe work under win32.
        - localise $! in signal handler to avoid changing $!, although
          perl itself does not seem to save/restore errno either.
	- set the cloexec flag on the signal pipe (normally set by perl too).

4.35  Fri Mar 27 11:48:20 CET 2009
        - event models relying on AnyEvent's signal watcher emulation did
          invoke the callback asynchronously, contradicting documentation
          and causing signals to get lost (this includes AnyEvent's own
          event loop). AnyEvent now uses the standard pipe trick to make